--- a/DataingAppApi/appsettings.json
+++ b/DataingAppApi/appsettings.json
@@ -9,5 +9,6 @@
   "ConnectionStrings": {
     "DatabaseCS": "Data source=backendapp.db",
     "SQLDB": "Data Source=(localdb)\\ProjectModels;Initial Catalog=master;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-  }
+  },
+  "TokenKey":  "ungessable key super hard to decrypt"
 }
