--- a/DataingAppApi/DataingAppApi.csproj
+++ b/DataingAppApi/DataingAppApi.csproj
@@ -7,6 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="SeedFiles\UserSeedData.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="SeedFiles\UserSeedData.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.5">
       <PrivateAssets>all</PrivateAssets>
