--- a/Imfrastructure/Infrastructure.csproj
+++ b/Imfrastructure/Infrastructure.csproj
@@ -27,4 +27,10 @@
     <ProjectReference Include="..\Application\Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Persistance\SeedFiles\UserSeedData.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
