Adding cloudinary cloud methods to upload photots

--- a/DataingAppApi/appsettings.json
+++ b/DataingAppApi/appsettings.json
@@ -10,5 +10,10 @@
     "DatabaseCS": "Data source=backendapp.db",
     "SQLDB": "Data Source=(localdb)\\ProjectModels;Initial Catalog=master;Integrated Security=True;Connect Timeout=60;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
-  "TokenKey":  "ungessable key super hard to decrypt"
+  "CloudinarySettings": {
+    "CloudName": "dekh7jhgb",
+    "ApiKey": "834916436661487",
+    "ApiSecret": "xskWVz0Psfp5bK5u_9FligO09AU"
+  },
+  "TokenKey": "ungessable key super hard to decrypt"
 }
